k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: syntiant-atlas
  labels:
    app.kubernetes.io/part-of: syntiant-atlas
