k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: syntiant-atlas
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
