k8s/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: syntiant-atlas
  labels:
    app: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
